Fix page horizontal alignment

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
   color: #fff;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 a {
@@ -196,7 +195,7 @@ header .navbar {
   background-color: #3882f6;
   border: 2px solid #fff;
   align-self: flex-end;
-  margin-right: 40px;
+  margin-right: 10px;
 }
 
 .footer {
